Fix the last row not being fully visible in Manage Roles table

--- a/frontend/projects/upgrade/src/app/features/dashboard/profile/components/profile-info/profile-info.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/profile/components/profile-info/profile-info.component.scss
@@ -86,6 +86,7 @@ $role-text-color: #0a7319;
 
     .users-list-container {
       margin-top: 20px;
+      padding-bottom: 35px;
       overflow: auto;
 
       .users-list {
